// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie notification snapshot 1`] = `
"Hey there,</br>
<p>
The movie 'Die Hard' has just been added to the Plex Server.</br>
From my understanding, you asked to be notified about this.</br>
<p>
It should be ready any moment to be streamed!
<p>
Don't want this notification? Toggle your subscription on LanFlix."
`;

exports[`New Show notification snapshot 1`] = `
"'Atlanta' appears to be a new show on the server, would you like to subscribe?</br>
<p>
If so, continue to LanFlix (lanflix.firebaseapp.com) and toggle the subscription!"
`;

exports[`Request movie notification snapshot 1`] = `"<a href='https://www.themoviedb.org/movie/undefined'><h3>Die Hard</h3></a></br><img src=\\"http://image.tmdb.org/t/p/originalundefined\\" style='width:200px;height:300px;'/><br>"`;

exports[`Request show notification snapshot 1`] = `"<a href='https://www.themoviedb.org/tv/undefined'><h3>Atlanta</h3></a></br><img src=\\"http://image.tmdb.org/t/p/originalundefined\\" style='width:200px;height:300px;'/><br></br>Which: all"`;

exports[`Show notification snapshot 1`] = `
"Hey there,</br>
<p>
The show 'Atlanta' has just been added to the Plex Server.</br>
From my understanding, you asked to be notified about this.</br>
<p>
It should be ready any moment to be streamed!
<p>
Don't want this notification? Toggle your subscription on LanFlix."
`;
